--- a/sample.html
+++ b/sample.html
@@ -415,6 +415,10 @@
         <script src="js/swiper.js"></script>
         <script>
             var swiper = new Swiper('.swiper-container', {
+      		autoplay: {
+        			delay: 2500,
+        			disableOnInteraction: false,
+      		},
                 pagination: {
                     el: '.swiper-pagination',
                 }
